After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 673151 - printers: Fix small memory leak
printers: Fix small memory leak
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Printers
unspecified
Other All
: Normal normal
: ---
Assigned To: Marek Kašík
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-03-30 09:35 UTC by Bastien Nocera
Modified: 2012-04-13 13:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
printers: Fix small memory leak (888 bytes, patch)
2012-03-30 09:35 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2012-03-30 09:35:12 UTC
Untested
Comment 1 Bastien Nocera 2012-03-30 09:35:14 UTC
Created attachment 210933 [details] [review]
printers: Fix small memory leak
Comment 2 Marek Kašík 2012-04-04 15:35:37 UTC
Comment on attachment 210933 [details] [review]
printers: Fix small memory leak

Hi,

thank you for the patch. Please commit it.

Marek