printers: Fix small memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=673151